WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95088
Web Inspector: Debugger should break on failed assertions in Break on exceptions mode.
https://bugs.webkit.org/show_bug.cgi?id=95088
Summary
Web Inspector: Debugger should break on failed assertions in Break on excepti...
Vsevolod Vlasov
Reported
2012-08-27 08:02:55 PDT
Patch to follow.
Attachments
Patch
(10.87 KB, patch)
2012-08-27 08:12 PDT
,
Vsevolod Vlasov
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2012-08-27 08:12:28 PDT
Created
attachment 160723
[details]
Patch
Yury Semikhatsky
Comment 2
2012-08-27 08:25:52 PDT
Comment on
attachment 160723
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160723&action=review
> Source/WebCore/inspector/InspectorInstrumentation.cpp:894 > + if (InspectorDebuggerAgent* debuggerAgent = instrumentingAgents->inspectorDebuggerAgent())
I would call console agent first in order to have the message appear in the console before pausing. We had user complains about exceptions being logged only after you resume.
Vsevolod Vlasov
Comment 3
2012-08-27 08:43:05 PDT
Committed
r126764
: <
http://trac.webkit.org/changeset/126764
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug