Web Inspector: Debugger should break on failed assertions in Break on exceptions mode. https://bugs.webkit.org/show_bug.cgi?id=95088

Reviewed by Yury Semikhatsky.

Source/WebCore:

Debugger now breaks when assert message is added to console from console API.

Test: inspector/debugger/debugger-pause-on-failed-assertion.html

* English.lproj/localizedStrings.js:
* inspector/Inspector.json:
* inspector/InspectorDebuggerAgent.cpp:
(WebCore::InspectorDebuggerAgent::addMessageToConsole):
(WebCore):
* inspector/InspectorDebuggerAgent.h:
(InspectorDebuggerAgent):
* inspector/InspectorInstrumentation.cpp:
(WebCore):
(WebCore::InspectorInstrumentation::addMessageToConsoleImpl):
* inspector/front-end/DebuggerModel.js:
* inspector/front-end/ScriptsPanel.js:

LayoutTests:

* inspector/debugger/debugger-pause-on-failed-assertion-expected.txt: Added.
* inspector/debugger/debugger-pause-on-failed-assertion.html: Added.

Canonical link: https://commits.webkit.org/112945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126764 268f45cc-cd09-0410-ab3c-d52691b4dbfc