Source/WebCore/inspector/front-end/DebuggerModel.js
@@ -94,7 +94,8 @@ WebInspector.DebuggerModel.BreakReason = {
     DOM: "DOM",
     EventListener: "EventListener",
     XHR: "XHR",
-    Exception: "exception"
+    Exception: "exception",
+    Assert: "assert"
 }
 
 WebInspector.DebuggerModel.prototype = {
